2009-10-07  Lluis Sanchez Gual  <lluis@novell.com>

	* configure:
	* AssemblyInfo.cs:
	* AspNetEdit.addin.xml: Bump MD version.

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* configure: We now depend on gtk# 2.12.8, Mono 2.4, and
	  Mono.Addins 0.4.

2009-07-28  Michael Hutchinson  <mhutchinson@novell.com>

	* AspNetEdit.Editor.UI/PropertyGrid.cs:
	* AspNetEdit.Integration/AspNetEditViewContent.cs: Track
	  PropertyGrid namespace move.

2009-06-23  Michael Hutchinson  <mhutchinson@novell.com>

	* AspNetEdit.Integration/AspNetEditViewContent.cs: Fix build.

2009-06-23  Lluis Sanchez Gual  <lluis@novell.com>

	* AspNetEdit.Integration/AspNetEditViewContent.cs: Use the new
	  DesktopService instead of PlatformService.

2009-05-19  Lluis Sanchez Gual  <lluis@novell.com>

	* AspNetEdit.csproj: Flush.

2009-04-15  Lluis Sanchez Gual  <lluis@novell.com>

	* configure:
	* AssemblyInfo.cs:
	* AspNetEdit.addin.xml: Bump MD version.

2009-02-26  Lluis Sanchez Gual  <lluis@novell.com>

	* AspNetEdit.sln: Flush.

2009-02-26  Lluis Sanchez Gual  <lluis@novell.com>

	* AspNetEdit.csproj: Flush.

2009-02-25  Michael Hutchinson  <mhutchinson@novell.com>

	* AspNetEdit.sln: Set policies. Remove unused name attribute.

2009-02-10  Michael Hutchinson  <mhutchinson@novell.com>

	* AspNetEdit.Integration/MonoDevelopProxy.cs: Track API.

2009/02/06  Lluis Sanchez Gual  <lluis@novell.com>

 * AspNetEdit.sln:
 * AspNetEdit.mds:
 * AspNetEdit.csproj: Migrated to MSBuild file format.

2009/02/03  Lluis Sanchez Gual  <lluis@novell.com>

 * configure:
 * AssemblyInfo.cs:
 * AspNetEdit.addin.xml: Bump MD version.

2009-01-26  Michael Hutchinson  <mhutchinson@novell.com>

	* AspNetEdit.mdp: Flush project format changes.

2009-01-16  Michael Hutchinson  <mhutchinson@novell.com>

	* AspNetEdit.Integration/AspNetEditDisplayBinding.cs: Track API.

2008-12-09  Lluis Sanchez Gual  <lluis@novell.com>

	* AspNetEdit.mdp: Don't require a specific version of Mono.Addins.
